<resources>
    <string name="app_name">Open It All</string>
    <string name="start_game">Start the Game</string>
    <string name="level">Level: %d</string>
    <string name="score">Score</string>
    <string name="return_to_main_menu">Return to main menu</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="_4">4.</string>
    <string name="_5">5.</string>
    <string name="best_results">Best results</string>
</resources>